update notebooks after paper review

--- a/3_calculate_DPCs.ipynb
+++ b/3_calculate_DPCs.ipynb
@@ -18,11 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c3fd0e50-ed8a-429b-8b54-21bcf0b9788f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12 µs, sys: 4 µs, total: 16 µs\n",
+      "Wall time: 19.3 µs\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "from DPC_functions import * "
    ]
   },
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "b113d98c-3caa-4aa6-97b0-65d0c4a4d732",
    "metadata": {},
    "outputs": [],
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7396779e-6110-440b-abc3-535835610ab6",
    "metadata": {},
    "outputs": [],
@@ -116,11 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "cdb25648-b383-454d-aafa-781529c6ea45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.58 ms, sys: 2.97 s, total: 2.98 s\n",
+      "Wall time: 22.9 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# As calculated in 1_:\n",
     "# forcingdir='/where/you/downloaded/ECCO/files/other/flux-forced/forcing/'\n",
     "forcingdir='/glade/work/dafydd/ECCOv4r4_input/other/flux-forced/forcing/'\n",
@@ -139,46 +159,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "id": "d5e48479-e22d-4383-8fd1-91b0ed26e9e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((37988, 1), (1,), (1, 3650))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DPC55_hflux,a,b=la.svds(hflux_X.dot(MVT55_hflux_ad.T),k=1)\n",
+    "DPC55_hflux.shape,a.shape,b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "96f92524-9271-4634-b99e-de74ccece39b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20600417.75403425])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "32a082c6-f25c-4122-9311-1e6dece98094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "################# Heat flux\n",
+    "DPC55_hflux,SV55_hflux,_=la.svds(hflux_X.dot(MVT55_hflux_ad.T),k=1)\n",
+    "EDF55_hflux             = hflux_X.T.dot(DPC55_hflux)\n",
+    "\n",
+    "# DPC45_hflux,SV45_hflux,_=la.svds(hflux_X.dot(MVT45_hflux_ad.T),k=1)\n",
+    "# EDF45_hflux             = hflux_X.T.dot(DPC45_hflux)\n",
+    "\n",
+    "# DPC35_hflux,SV35_hflux,_=la.svds(hflux_X.dot(MVT35_hflux_ad.T),k=1)\n",
+    "# EDF35_hflux             = hflux_X.T.dot(DPC35_hflux)\n",
+    "\n",
+    "DPC25_hflux,SV25_hflux,_=la.svds(hflux_X.dot(MVT25_hflux_ad.T),k=1)\n",
+    "EDF25_hflux             = hflux_X.T.dot(DPC25_hflux)\n",
+    "\n",
+    "################## Wind stress\n",
+    "DPC55_tauxy,SV55_tauxy,_=la.svds(uvstress_X.dot(MVT55_tauxy_ad.T),k=1)\n",
+    "EDF55_tauxy             = uvstress_X.T.dot(DPC55_tauxy)\n",
+    "\n",
+    "# DPC45_tauxy,SV45_tauxy,_=la.svds(uvstress_X.dot(MVT45_tauxy_ad.T),k=1)\n",
+    "# EDF45_tauxy    = uvstress_X.T.dot(DPC45_tauxy)\n",
+    "\n",
+    "# DPC35_tauxy,SV35_tauxy,_=la.svds(uvstress_X.dot(MVT35_tauxy_ad.T),k=1)\n",
+    "# EDF35_tauxy    = uvstress_X.T.dot(DPC35_tauxy)\n",
+    "\n",
+    "DPC25_tauxy,SV25_tauxy,_=la.svds(uvstress_X.dot(MVT25_tauxy_ad.T),k=1)\n",
+    "EDF25_tauxy,            = uvstress_X.T.dot(DPC25_tauxy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ece00f4d-996a-4e91-b848-aa394418fa6b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 5s, sys: 1.81 s, total: 3min 6s\n",
-      "Wall time: 3min 16s\n"
+      "[20600417.75403425]\n",
+      "[20504775.82670691]\n",
+      "[26975093.08104989]\n",
+      "[20568285.09913359]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(SV55_hflux)\n",
+    "print(SV25_hflux)\n",
+    "print(SV55_tauxy)\n",
+    "print(SV25_tauxy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "522732ab-179a-46c2-8b31-d2de30312dd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((37988, 10469), (37988, 1))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hflux_X.shape,DPC55_hflux.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "909a4a0e-e5d3-40b7-a99f-9f63f0f1e5cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tauxy_X=uvstress_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b3d9a96f-4cf3-4580-bd75-ac209992824c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.46 s, sys: 57 µs, total: 1.46 s\n",
+      "Wall time: 1.53 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "################# Heat flux\n",
-    "DPC55_hflux,_,_=la.svds(hflux_X.dot(MVT55_hflux_ad.T),k=1)\n",
-    "EDF55_hflux    = hflux_X.T.dot(DPC55_hflux)\n",
-    "\n",
-    "# DPC45_hflux,_,_=la.svds(hflux_X.dot(MVT45_hflux_ad.T),k=1)\n",
-    "# EDF45_hflux    = hflux_X.T.dot(DPC45_hflux)\n",
-    "\n",
-    "# DPC35_hflux,_,_=la.svds(hflux_X.dot(MVT35_hflux_ad.T),k=1)\n",
-    "# EDF35_hflux    = hflux_X.T.dot(DPC35_hflux)\n",
-    "\n",
-    "DPC25_hflux,_,_=la.svds(hflux_X.dot(MVT25_hflux_ad.T),k=1)\n",
-    "EDF25_hflux    = hflux_X.T.dot(DPC25_hflux)\n",
-    "\n",
-    "################## Wind stress\n",
-    "DPC55_tauxy,_,_=la.svds(uvstress_X.dot(MVT55_tauxy_ad.T),k=1)\n",
-    "EDF55_tauxy    = uvstress_X.T.dot(DPC55_tauxy)\n",
-    "\n",
-    "# DPC45_tauxy,_,_=la.svds(uvstress_X.dot(MVT45_tauxy_ad.T),k=1)\n",
-    "# EDF45_tauxy    = uvstress_X.T.dot(DPC45_tauxy)\n",
-    "\n",
-    "# DPC35_tauxy,_,_=la.svds(uvstress_X.dot(MVT35_tauxy_ad.T),k=1)\n",
-    "# EDF35_tauxy    = uvstress_X.T.dot(DPC35_tauxy)\n",
-    "\n",
-    "DPC25_tauxy,_,_=la.svds(uvstress_X.dot(MVT25_tauxy_ad.T),k=1)\n",
-    "EDF25_tauxy    = uvstress_X.T.dot(DPC25_tauxy)"
+    "STD55_hflux=np.linalg.norm(hflux_X.T.dot(DPC55_hflux))\n",
+    "STD25_hflux=np.linalg.norm(hflux_X.T.dot(DPC25_hflux))\n",
+    "STD55_tauxy=np.linalg.norm(tauxy_X.T.dot(DPC55_tauxy))\n",
+    "STD25_tauxy=np.linalg.norm(tauxy_X.T.dot(DPC25_tauxy))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "074f1c25-a2ad-4698-a23e-62a6041ffcad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "438844.11137284397\n",
+      "428713.1552430846\n",
+      "603.5267508260464\n",
+      "602.2064256165615\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(STD25_hflux)\n",
+    "print(STD55_hflux)\n",
+    "print(STD55_tauxy)\n",
+    "print(STD25_tauxy)"
    ]
   },
   {
