add placeholder path strings

--- a/1_install_ECCO_get_data_matrices.ipynb
+++ b/1_install_ECCO_get_data_matrices.ipynb
@@ -101,8 +101,7 @@
     }
    ],
    "source": [
-    "# forcingdir='/where/you/downloaded/ECCO/files/other/flux-forced/forcing/'\n",
-    "forcingdir='/glade/work/dafydd/ECCOv4r4_input/other/flux-forced/forcing/'\n",
+    "forcingdir='/where/you/downloaded/ECCO/files/other/flux-forced/forcing/'\n",
     "hflux_X,hflux_X_clim=get_ecco_forcing('TFLUX',forcing_dir=forcingdir,show_progress=True)\n",
     "hflux_X=forcing_anom(hflux_X,hflux_X_clim)"
    ]
@@ -238,8 +237,7 @@
    ],
    "source": [
     "%%time\n",
-    "#forcingdir='</where/you/downloaded/ECCO/files>/other/flux-forced/forcing/'\n",
-    "forcingdir='/glade/work/dafydd/ECCOv4r4_input/other/flux-forced/forcing'\n",
+    "forcingdir='</where/you/downloaded/ECCO/files>/other/flux-forced/forcing/'\n",
     "taux_X,taux_X_clim=get_ecco_forcing('oceTAUX',forcing_dir=forcingdir,show_progress=False)\n",
     "taux_X=forcing_anom(taux_X,taux_X_clim)\n",
     "taux_X=taux_X.reshape(-1,13*90*90)[:,Ui]\n",
