--- a/5_AMOC_diagnostics.ipynb
+++ b/5_AMOC_diagnostics.ipynb
@@ -5,7 +5,6 @@
    "id": "d5b5073e-9d8d-496e-aab2-dae0606ce4ef",
    "metadata": {},
    "source": [
-    "# AMOC diagnostics: TO DO? See /glade/u/home/dafydd/NGC_AMOC_draft_figures for code\n",
     "This notebook takes the output from the runs set up in notebook `4_`...`.ipynb` and presents multiple diagnostics used in our analysis."
    ]
   },
@@ -50,11 +49,9 @@
    "source": [
     "# Load the data: leading COF, OOF and EOF for heat flux\n",
     "\n",
-    "# forcingdir='/where/you/downloaded/ECCO/files/other/flux-forced/forcing/'\n",
-    "forcingdir='/glade/work/dafydd/ECCOv4r4_input/other/flux-forced/forcing/'\n",
+    "forcingdir='/where/you/downloaded/ECCO/files/other/flux-forced/forcing/'\n",
     "\n",
-    "#adjoint_output_location=/parent/directory/to/your/ECCO/adjoint/runs/\n",
-    "adjoint_output_location='/glade/work/dafydd/PLEIADES_OUTPUT/'\n",
+    "adjoint_output_location='/parent/directory/to/your/ECCO/adjoint/runs/'\n",
     "\n",
     "EOF1_hflux=np.load(forcingdir+'hflux_eigenvectors.npy')[:,-1]\n",
     "hflux_V   =np.load(forcingdir+'hflux_eigenvalues.npy')\n",
@@ -254,7 +251,6 @@
    "outputs": [],
    "source": [
     "eccorundir='/wherever/you/set/up/modified_forcing_runs/'\n",
-    "eccorundir='/glade/work/dafydd/ECCOv4r4_runs/modified_FF_runs/'\n",
     "\n",
     "MOC25_hflux=    xr.open_dataset(eccorundir+'DPC25_hflux/atlantic_moc_diagnostics.nc').moc.T\n",
     "MOC55_hflux=    xr.open_dataset(eccorundir+'DPC55_hflux/atlantic_moc_diagnostics.nc').moc.T\n",
@@ -574,8 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eccorundir='/wherever/you/set/up/perturbed_forcing_runs/'\n",
-    "eccorundir='/glade/work/dafydd/ECCOv4r4_runs/perturbed_FF_runs/'"
+    "eccorundir='/wherever/you/set/up/perturbed_forcing_runs/'\n"
    ]
   },
   {
@@ -617,7 +612,6 @@
    "outputs": [],
    "source": [
     "eccorundir='/wherever/you/set/up/modified_forcing_runs/'\n",
-    "eccorundir='/glade/work/dafydd/ECCOv4r4_runs/perturbed_FF_runs/'\n",
     "\n",
     "MOC25_hflux=    xr.open_dataset(eccorundir+'DPC25_hflux/atlantic_moc_diagnostics.nc').moc.T\n",
     "MOC55_hflux=    xr.open_dataset(eccorundir+'DPC55_hflux/atlantic_moc_diagnostics.nc').moc.T\n",
@@ -802,8 +796,9 @@
    ],
    "source": [
     "%%time \n",
-    "slp_COV=np.load('/glade/work/dafydd/patterns_and_decompositions/apressure_COV.npy')\n",
-    "slp_X  =np.load('/glade/work/dafydd/patterns_and_decompositions/apressure_X.npy')\n",
+    "forcingdir='/where/you/downloaded/ECCO/files/other/flux-forced/forcing/'\n",
+    "slp_COV=np.load(forcingdir+'apressure_COV.npy') #SLP covariance matrix\n",
+    "slp_X  =np.load(forcingdir+'apressure_X.npy')   #SLP data matrix\n",
     "slp_V,slp_Q=la.eigsh(slp_COV,k=4)\n",
     "\n",
     "NAO_t=slp_X.dot(slp_Q[:,-1]);NAO_t=NAO_t/np.linalg.norm(NAO_t)\n",
@@ -829,8 +824,8 @@
    "source": [
     "%%time\n",
     "\n",
-    "hflux_X    =np.load('/glade/work/dafydd/patterns_and_decompositions/hflux_X.npy')\n",
-    "uvstress_X =np.load('/glade/work/dafydd/patterns_and_decompositions/uvstress_X.npy')\n",
+    "hflux_X    =np.load(forcingdir+ 'hflux_X.npy')\n",
+    "uvstress_X =np.load(forcingdir+'uvstress_X.npy')\n",
     "\n",
     "NAO_uv=uvstress_X[:-4,:].T.dot(NAO_t);NAO_uv=NAO_uv/np.linalg.norm(NAO_uv)\n",
     "EAP_uv=uvstress_X[:-4,:].T.dot(EAP_t);EAP_uv=EAP_uv/np.linalg.norm(EAP_uv)\n",
@@ -927,7 +922,7 @@
    "outputs": [],
    "source": [
     "# Load density anomalies\n",
-    "eccorundir='/glade/work/dafydd/ECCOv4r4_runs/perturbed_FF_runs/'\n",
+    "eccorundir='/wherever/you/set/up/perturbed_forcing_runs/'\n",
     "ρDS25_hflux=xr.open_dataset(eccorundir+'DPC25_hflux/RHOAnoma.nc')\n",
     "ρDS55_hflux=xr.open_dataset(eccorundir+'DPC55_hflux/RHOAnoma.nc')\n",
     "\n",
@@ -1086,7 +1081,7 @@
    "outputs": [],
    "source": [
     "# Load dh anomalies\n",
-    "eccorundir='/glade/work/dafydd/ECCOv4r4_runs/perturbed_FF_runs/'\n",
+    "eccorundir='/wherever/you/set/up/perturbed_forcing_runs/'\n",
     "DHDS25_hflux=xr.open_dataset(eccorundir+'DPC25_hflux/SSH.nc')\n",
     "DHDS55_hflux=xr.open_dataset(eccorundir+'DPC55_hflux/SSH.nc')\n",
     "\n",
